--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="./NewImg.jpg" type="imge/x-icon" rel="icon">
-    <link rel="stylesheet" href="/Portfolio.css">
+    <link rel="stylesheet" href="Portfolio.css">
     <title>portofolo</title>
 </head>
 <body>
